# milFOC

./: .gitignore  CMakeLists.txt  README.md  STM32G431XX_FLASH.ld  milFOC.ioc
.github/agents/: milFOC.agent.md
App/: README.md  bringup_task.c  bringup_task.h  calc_test_task.c  calc_test_task.h  can_test.c  can_test.h  cmd_task.c  cmd_task.h  motor_task.c  motor_task.h  robot.c  robot.h  robot_def.h  usart_test.c  usart_test.h  vofa_test.c  vofa_test.h
BSP/: README.md  bsp_adc.c  bsp_adc.h  bsp_can.c  bsp_can.h  bsp_dwt.c  bsp_dwt.h  bsp_fdcan.h  bsp_flash.c  bsp_flash.h  bsp_init.c  bsp_init.h  bsp_log.c  bsp_log.h  bsp_usart.c  bsp_usart.h
Core/Inc/: FreeRTOSConfig.h  main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
Core/Src/: adc.c  app_freertos.c  cordic.c  crc.c  dma.c  fdcan.c  gpio.c  main.c  rng.c  spi.c  stm32g4xx_hal_msp.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c  tim.c  usart.c
Docs/FalconFoc/: Zhang-FOC.ioc
Docs/FalconFoc/.github/agents/: FOC.agent.md
Docs/FalconFoc/APP/: robot.c  robot.h  robot_def.h  robot_task.h
Docs/FalconFoc/APP/cmd_task/: cmd_task.c  cmd_task.h
Docs/FalconFoc/APP/motor_task/: motor_task.c  motor_task.h
Docs/FalconFoc/BSP/: bsp_init.h
Docs/FalconFoc/BSP/adc/: bsp_adc.c  bsp_adc.h
Docs/FalconFoc/BSP/can/: bsp_can.c
Docs/FalconFoc/BSP/dwt/: bsp_dwt.c
Docs/FalconFoc/BSP/flash/: bsp_flash.c  bsp_flash.h
Docs/FalconFoc/BSP/log/: bsp_log.c  bsp_log.h
Docs/FalconFoc/BSP/usart/: bsp_usart.h
Docs/FalconFoc/Core/Inc/: FreeRTOSConfig.h  main.h  stm32g4xx_it.h
Docs/FalconFoc/Core/Src/: adc.c  app_freertos.c  crc.c  dma.c  fdcan.c  gpio.c  main.c  rng.c  spi.c  stm32g4xx_hal_msp.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c  tim.c  usart.c
Docs/FalconFoc/MDK-ARM/: V4.720.code-workspace  Zhang-FOC.uvguix.16429  Zhang-FOC.uvoptx  Zhang-FOC.uvprojx  startup_stm32g431xx.lst  startup_stm32g431xx.s
Docs/FalconFoc/MDK-ARM/RTE/_Zhang-FOC/: RTE_Components.h
Docs/FalconFoc/MDK-ARM/Zhang-FOC/: Zhang-FOC.axf  Zhang-FOC.build_log.htm  Zhang-FOC.htm  Zhang-FOC.lnp  Zhang-FOC_Zhang-FOC.dep  _atoiqn.crf  _atoiqn.d  _iqnasin_acos.crf  _iqnasin_acos.d  _iqnatan2.crf  _iqnatan2.d  _iqndiv.crf  _iqndiv.d  _iqnexp.crf  _iqnexp.d  _iqnfrac.crf  _iqnfrac.d  _iqnlog.crf  _iqnlog.d  _iqnmpy.crf  _iqnmpy.d  _iqnmpyiqx.crf  _iqnmpyiqx.d  _iqnrepeat.crf  _iqnrepeat.d  _iqnrmpy.crf  _iqnrmpy.d  _iqnrsmpy.crf  _iqnrsmpy.d  _iqnsin_cos.crf  _iqnsin_cos.d  _iqnsqrt.crf  _iqnsqrt.d  _iqntables.crf  _iqntables.d  _iqntoa.crf  _iqntoa.d  _iqntof.crf  _iqntof.d  _iqnversion.crf  (+171 more)
Docs/FalconFoc/MODULES/can_comm/: can_driver.c  can_driver.h
Docs/FalconFoc/MODULES/encoder/MT6816/: mt6816_encoder.c  mt6816_encoder.h
Docs/FalconFoc/MODULES/flash/: flash_driver.c  flash_driver.h
Docs/FalconFoc/MODULES/led/: led.c  led.h
Docs/FalconFoc/MODULES/motor/: BLDCMotor.c  BLDCMotor.h  FOCMotor.c  FOCMotor.h  Motor_ADC.c  Motor_ADC.h
Docs/FalconFoc/MODULES/vofa/: vofa.c  vofa.h
Docs/FalconFoc/USB_Device/App/: usbd_cdc_if.c
Docs/FalconFoc/learningMD/: Data_Structure.md  FalcoFOC代码分析.md  foc计算流程.md
Docs/MotorConrol/: arm_cos_f32.c  arm_sin_f32.c
Modules/: README.md  general_def.h
Modules/algorithm/crc/: crc16.c  crc16.h  crc8.c  crc8.h
Modules/comm/: can_driver.c  can_driver.h
Modules/controller/: pid.c  pid.h
Modules/daemon/: daemon.c  daemon.h
Modules/encoder/: mt6816_encoder.c  mt6816_encoder.h  virtual_encoder.c  virtual_encoder.h
Modules/flash/: flash_driver.c  flash_driver.h
Modules/led/: led.c  led.h
Modules/motor/: bldc_motor.c  bldc_motor.h  foc_motor.c  foc_motor.h  motor_adc.c  motor_adc.h  trap_traj.c  trap_traj.h
Modules/vofa/: vofa.c  vofa.h
Resources/: general_def.h
Resources/can/: bsp_fdcan.c  bsp_fdcan.h
USB_Device/App/: usbd_cdc_if.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
